Added all Service tests